--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new website</title>
-</head>
-<body>
-    <h1>Hello world</h1>
-</body>
+<html>
+  <head>
+    <title>Login Page</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <form>
+      <h1>Login</h1>
+      <label for="username"><b>Username:</b></label>
+      <input type="text" placeholder="Enter Username" id="username" name="username" required>
+
+      <label for="password"><b>Password:</b></label>
+      <input type="password" placeholder="Enter Password" id="password" name="password" required>
+
+      <button type="submit" onclick="login()">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </form>
+  </body>
 </html>
